# organize_directory

./: .gitattributes  .gitignore  README.md  __init__.py  __main__.py  extensions_map.ini  extensions_map.json  file_organizer.py  pyproject.toml  targets.cfg  targets.py  tests.py
.github/workflows/: workflow.yml
src/file_organizer/: __init__.py  __main__.py  config.py  file_organizer.py  logs.py  organizer_config.py
tests/: extensions_map.ini  extensions_map.json  test.py  test___main__.py  test_config.py  test_file_organizer.py  test_init.py  test_methods.py  test_organizer_config.py
