[project]
name = "file-organizer"
version = "2.0.53"
description = "A script originally intended to organize my Downloads folder."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]

[tool.ruff]
indent-width = 4
line-length = 79

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["I"]
