[project]
name = "file-organizer"
version = "4.1.3"
description = "A script originally intended to organize my Downloads folder."
authors = [{ name = "Charles Mesa Cayobit", email = "charlesmesacayobit@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
organize = "file_organizer.__main__:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]

[tool.uv]
package = true

[tool.ruff]
indent-width = 4
line-length = 80

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["I"]
